# teleopration

./: .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt
config/: teleop.env
examples/: avp_print_pose.py  avp_ros2_target_pose.py
recordings/: avp_forward_xyz_calibration.json
robots/: README.md
robots/ur10e_rtde/: README.md  pyproject.toml
robots/ur10e_rtde/teleop_ur10e_rtde/: __init__.py  driver.py  gripper_cli.py  math_utils.py  preflight.py  ros2_node.py
scripts/: check_teleop_readiness.sh  move_ur_tcp_delta.py  start_avp_to_ur.sh  start_ur10e_backend.sh
teleoperation/: __init__.py  session.py  types.py
teleoperation/avp/: __init__.py  television.py
teleoperation/cli/: calibrate_avp_frame.py  check_avp_calibrated_delta.py  check_avp_output.py  config.py  export_avp_csv.py  network.py  publish_avp_pose.py  record_avp_data.py  replay_avp_recording.py  simulate_avp_output.py  stream_usb_camera.py  url_display.py
teleoperation/preprocessing/: __init__.py  transforms.py
teleoperation/ros2/: __init__.py  pose_publisher.py
