[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teleoperation"
version = "0.1.0"
description = "Vision Pro teleoperation core with optional ROS2 and robot backends"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
avp = [
  "aiohttp>=3.9",
  "aiohttp_cors>=0.7",
  "aiortc>=1.8",
  "av>=11",
  "params-proto>=2.11.16,<3",
  "vuer==0.0.32rc7",
]
image = [
  "opencv-python>=4.9",
]
all = [
  "aiohttp>=3.9",
  "aiohttp_cors>=0.7",
  "aiortc>=1.8",
  "av>=11",
  "params-proto>=2.11.16,<3",
  "vuer==0.0.32rc7",
  "opencv-python>=4.9",
]

[project.scripts]
teleop-check-avp-output = "teleoperation.cli.check_avp_output:main"
teleop-export-avp-csv = "teleoperation.cli.export_avp_csv:main"
teleop-publish-avp-pose = "teleoperation.cli.publish_avp_pose:main"
teleop-record-avp-data = "teleoperation.cli.record_avp_data:main"
teleop-replay-avp-recording = "teleoperation.cli.replay_avp_recording:main"
teleop-sim-avp-output = "teleoperation.cli.simulate_avp_output:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["teleoperation*"]
