[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teleop-ur10e-rtde"
version = "0.1.0"
description = "UR10e RTDE backend for the teleoperation core"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.scripts]
teleop-check-ur10e-state = "teleop_ur10e_rtde.preflight:main"
teleop-ur10e-rtde = "teleop_ur10e_rtde.ros2_node:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["teleop_ur10e_rtde*"]
